--- a/back-end/env.example
+++ b/back-end/env.example
@@ -2,14 +2,11 @@
 # Terelina Backend System - Example Environment Configuration
 # =====================================================================
 #
-# Copy this file to .env and fill in the values if you are running
-# the application outside of the provided Docker Compose setup.
-# The default values are optimized for the Docker environment.
+# Copy this file to the project's root directory and rename it to .env
 #
 # =====================================================================
 
 # --- Database Connection ---
-# Defines how the backend connects to the PostgreSQL database.
 DB_HOST=db
 DB_NAME=terelina_db
 DB_USER=postgres
@@ -17,16 +14,20 @@ DB_PASSWORD=postgres
 DB_PORT=5432
 
 # --- MQTT Broker Connection ---
-# Configures the connection to the MQTT broker for receiving data from the ESP32.
 MQTT_BROKER_HOST=broker.hivemq.com
 MQTT_BROKER_PORT=1883
 MQTT_TOPIC_STATE=sensors/barrier/state
 MQTT_USERNAME=
 MQTT_PASSWORD=
-MQTT_CLIENT_ID=terelina_backend
+
+# !!! IMPORTANT !!!
+# Each instance of this system (production, development, etc.)
+# MUST have a unique MQTT Client ID.
+# For production, use something like "terelina_backend_prod_loja01".
+# For development, use something like "terelina_backend_dev_yourname".
+MQTT_CLIENT_ID=terelina_backend_CHANGE_THIS_TO_UNIQUE_ID
 
 # --- Application Server ---
-# General settings for the FastAPI/Uvicorn web server.
 APP_HOST=0.0.0.0
 APP_PORT=8000
 LOG_LEVEL=INFO
