--- a/back-end/env.example
+++ b/back-end/env.example
@@ -14,7 +14,7 @@ DB_PASSWORD=postgres
 DB_PORT=5432
 
 # --- MQTT Broker Connection ---
-MQTT_BROKER_HOST=broker.hivemq.com
+MQTT_BROKER_HOST=mqtt
 MQTT_BROKER_PORT=1883
 MQTT_TOPIC_STATE=sensors/barrier/state
 MQTT_USERNAME=
